--- a/Year 1 Fall/MATH1853/MATH1853 Notes.tex
+++ b/Year 1 Fall/MATH1853/MATH1853 Notes.tex
@@ -6,7 +6,7 @@
 
 \usepackage{../../LaTeX-Preamables/Clean}
 \newcommand{\documentdate}{Fall 2023}
-\newcommand{\documenttype}{Notes}
+\newcommand{\documenttype}{Notes for HKU}
 
 % ------------------------------------ %
 %              Title page              %
