--- a/Year 1 Spring/ENGG1320/ENGG1320 Notes.tex
+++ b/Year 1 Spring/ENGG1320/ENGG1320 Notes.tex
@@ -6,7 +6,7 @@
 
 \usepackage{../../LaTeX-Preamables/Clean}
 \newcommand{\documentdate}{Spring 2024}
-\newcommand{\documenttype}{Notes}
+\newcommand{\documenttype}{Notes for HKU}
 
 % ------------------------------------ %
 %              Title page              %
@@ -31,24 +31,24 @@ A primary duty of Engineers is to innovate and invent \emph{products} that impro
 \subsection{Product realization}
 The product realization involves multiple steps, but we only have to focus on the \emph{product development} for the course. It includes 4 tasks:
 \begin{enumerate}
-      \item \textbf{Marketing and sales analysis}\\
-            Business planning. Check \hyperref[sec:market]{this} section.
-      \item \textbf{Industrial design}\\
-            Aims to improve aesthetics, ergonomics and usability of products for production and marketability
-      \item \textbf{Engineering design}\\
-            Aims to devise a system, component, or process to meet desired needs
-      \item \textbf{Manufacturing process design}\\
-            Determine the manufacturing process for making a product efficiently and cost-effectively
+    \item \textbf{Marketing and sales analysis}\\
+          Business planning. Check \hyperref[sec:market]{this} section.
+    \item \textbf{Industrial design}\\
+          Aims to improve aesthetics, ergonomics and usability of products for production and marketability
+    \item \textbf{Engineering design}\\
+          Aims to devise a system, component, or process to meet desired needs
+    \item \textbf{Manufacturing process design}\\
+          Determine the manufacturing process for making a product efficiently and cost-effectively
 \end{enumerate}
 \subsection{Product development technologies}
 We can use these technologies to increase the speed of our production:
 \begin{itemize}
-      \item Computer Numerical Control (CNC) machining
-      \item Laser Processing (Engraving and Cutting)
-      \item Waterjet Cutting
-      \item 3D Printing (also called rapid prototyping or additive manufacturing)
-      \item Virtual prototyping (VP)
-      \item Virtual manufacturing (VM)
+    \item Computer Numerical Control (CNC) machining
+    \item Laser Processing (Engraving and Cutting)
+    \item Waterjet Cutting
+    \item 3D Printing (also called rapid prototyping or additive manufacturing)
+    \item Virtual prototyping (VP)
+    \item Virtual manufacturing (VM)
 \end{itemize}
 
 
