--- a/LaTeX-Preamables/Clean.sty
+++ b/LaTeX-Preamables/Clean.sty
@@ -1,7 +1,7 @@
 
 \usepackage[utf8]{inputenc}
-\usepackage{amsmath, dsfont, mathtools}
-\usepackage{graphicx, float}
+\usepackage{amsmath, dsfont, mathtools, amssymb}
+\usepackage{graphicx, float, caption}
 \usepackage[most]{tcolorbox}
 \usepackage{enumitem}
 \usepackage{hyperref}
@@ -14,6 +14,7 @@
 \usepackage{listings, realboxes}
 
 \lstset{
+    showspaces=false,
     basicstyle=\footnotesize,        % the size of the fonts that are used for the code
     breakatwhitespace=false,         % sets if automatic breaks should only happen at whitespace
     breaklines=true,                 % sets automatic line breaking
@@ -34,10 +35,10 @@
     stringstyle=\color{purple},     % string literal style
     tabsize=1,	                   % sets default tabsize to 2 spaces
     frameshape={RYR}{Y}{Y}{RYR},
-    showspaces=false,
-    basicstyle=\ttfamily
+    basicstyle=\ttfamily,
+    showstringspaces=false,
+    captionpos=t
 }
-
 
 % ------------------------------------ %
 %             Customization            %
