--- a/LaTeX-Preamables/Title-V1.tex
+++ b/LaTeX-Preamables/Title-V1.tex
@@ -5,12 +5,14 @@
     \Huge\textbf{\documentname}
 
     \vspace{0.1cm}
-    \Large\textbf{\documenttype\ \documentdate}
+    \Large\textbf{\documenttype\ $\cdot$ \documentdate}
 
     \vspace{1cm}
     \normalsize\textbf{Author:} \documentauthor
 
     \normalsize\textbf{Contact:} \documentauthorcontact
+
+    MORE notes on my \href{https://enhancedjax.github.io/#/hkunotes}{website}!
     \vfill % Add vertical space to center the remaining space
     \textcolor{gray}{Made for personal use only. Unmodified re-distribution is allowed. Content for reference only.}
 \end{titlepage}
